@@ -1,3 +1,9 @@
+2009-01-11  Wenji Huang  <wenji.huang@oracle.com>
+
+        * tapsets.cxx (dwarf_derived_probe_group::emit_module_decls): Fix too
+	large number on 32-bits machines.
+	(uprobe_derived_probe_group::emit_module_decls): Ditto.
+
 2009-01-11  Mark Wielaard  <mjw@redhat.com>
 
 	* configure.ac: Add prefix as STAP_PREFIX for config.h.
